<resources>
    <string name="app_name">SpotPark</string>
    <string name="title_activity_maps">SpotPark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="could_not_login_signup">"Could not login/sign-up"</string>
    <string name="web_client_id">283432722166-v6kdsn60hqrv8bq1krv5f09g0repjbgk.apps.googleusercontent.com</string>
    <string name="account_successfully_created">"Account Successfully Created"</string>
    <string name="facebook_app_id">1937674546446635</string>

    <string name="action_help">"Action Help"</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete Check-In</string>
    <string name="history">Checkin History</string>
    <string name="favorite">Favorite Spots</string>
    <string name="contri">Contributions</string>
    <string name="settings">Settings</string>

    <!-- Login screen text-->
    <string name="login_button_text">"Login"</string>
    <string name="signup_button_text">"Sign Up"</string>
    <string name="forgot_pass_text">"Forgot password?"</string>
    <string name="email">"Email"</string>
    <string name="password">"Password"</string>

    <string name="fb_login_text">"Facebook"</string>
    <string name="google_login_text">"Google"</string>
    <string name="drawer_open">"drawer open"</string>
    <string name="drawer_close">"drawer closed"</string>
    <string name="checkin_ad_unit_id">ca-app-pub-6738316052917153/1081565822</string>
    <string name="report_ad_unit_id">ca-app-pub-6738316052917153/7289549821</string>
    <string name="carlocation_ad_unit_id">ca-app-pub-6738316052917153/3316361828</string>
    <string name="postcheckin_ad_unit_id">ca-app-pub-6738316052917153/6069521826</string>
    <string name="postreport_ad_unit_id">ca-app-pub-6738316052917153/7190524627</string>
    <!--<string name="googleAPI_serverkey">AIzaSyDKQYvSAVhRH6s8WW-RmtJPAyLnbjA9t8I</string>-->
    <string name="googleAPI_serverkey">AIzaSyBVcvHsXeNYexNJFz0MHdi3ApGORwCUTYA</string>
    <string name="googleAPI_directionskey">AIzaSyACGawqNaWIry4Poo2q4NO4V6kxMMy3iRw</string>
    <string name="ParkWhiz_API_key">c38210d1f5fda38362d86859997ef847</string>
    <string name="navigation_view_item_1">Search</string>
    <string name="navigation_view_item_2">Checkin</string>
    <string name="navigation_view_item_3">Report</string>
    <string name="navigation_view_item_4">Account</string>
    <string name="navigation_view_item_5">Help</string>
    <string name="navigation_view_category_1">Sliding Menu</string>
    <string name="test_device_ID">266C3F7B130505999AFFA64AAA489FBD</string>
    <string name="complain_string">
        <u>Complain</u>
    </string>

    <string name="howto1"></string>
    <string name="howto2"></string>
    <string name="howto3"></string>

    <string name="fulllist1">
        <u>See full list</u>
    </string>


</resources>
