<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/tab_background_unselected"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logowhite"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:id="@+id/loadicon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:layout_below="@+id/loadicon"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progress_bar"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/mainlayout">


            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logowhite"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/app_name"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px"/>


                <EditText
                    android:id="@+id/username"
                    android:nextFocusUp="@id/username"
                    android:nextFocusLeft="@id/username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:hint="@string/email"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:hint="@string/password"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">


                    <Button
                        android:id="@+id/login"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_height="wrap_content"
                        android:onClick="login"
                        android:textColor="@color/black"
                        android:background="#E8E8E8"
                        android:text="@string/login_button_text"
                        />

                    <Button
                        android:id="@+id/account"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_height="wrap_content"
                        android:onClick="showSignupDialog"
                        android:textColor="@color/black"
                        android:background="#E8E8E8"
                        android:text="@string/signup_button_text"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_pass_text"
                    android:layout_marginTop="16dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/white"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="16dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="OR"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_gravity="center"
                        android:background="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <FrameLayout
                        android:id="@+id/FrameLayout1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" >

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/fblogin_button"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="20dp"
                            android:visibility="gone"
                            />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:id="@+id/fblogin"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/loginfb"/>

                    </FrameLayout>



                    <FrameLayout
                        android:id="@+id/FrameLayout2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" >

                        <com.google.android.gms.common.SignInButton
                            android:id="@+id/google_login"
                            android:layout_width="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="20dp"
                            android:layout_height="48dp"

                            />


                    </FrameLayout>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</ScrollView>